[package]
name = "wait-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
tokio = { version = "1.23", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4.2"
proptest = "1"
